--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/Robertfarb/tunes-of-the-week#readme",
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "d3": "^5.5.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
