--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "d3": "^5.5.0",
+    "jquery": "^3.3.1",
+    "last-fm": "^5.2.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
