--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "d3": "^5.5.0",
+    "d3": "^5.6.0",
+    "d3-force": "^1.1.0",
     "jquery": "^3.3.1",
     "last-fm": "^5.2.1",
+    "scale": "0.0.7",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
