--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3-force": "^1.1.0",
     "jquery": "^3.3.1",
     "last-fm": "^5.2.1",
+    "react": "^16.4.2",
     "scale": "0.0.7",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
